# Autonomus-Lawnmower

./: .gitignore  README.md
HRP2_550Epos/__MACOSX/: ._hrp-p2z-open-dist.tar.bz2
Interpolationstest/: metadata.yaml
UserInputServer/: calc_goal.py  data.json  index.html  server.py
assets/: plot_data.py
assets/Cirkelkörning_2_meter_1000_ppm_ny/: metadata.yaml
assets/Cirkelkörning_3_meter_1000_ppm/: metadata.yaml
hrp-p2z-open-dist/src/hqv_public_interface/: CMakeLists.txt
javla_vinkel_20240419/: javla_vinkel_20240419_0.db3  metadata.yaml
matlab/: Simulering.slx  grasklippare.m
no_use/: differential_drive.py
rosbag2_2024_03_28-16_45_52/: metadata.yaml  rosbag2_2024_03_28-16_45_52_0.db3
scripts/: .keyboard-autostart.sh.swo  .shutdown.sh.swp  calibration_data_rtk.txt  calibration_imu_offset.py  coord_main_autostart.sh  coord_transformation.py  hrp2-autostart.sh  keyboard-autostart.sh  main_autostart.sh  shutdown.sh  test.sh  test.yaml
src/: RouteSequencePlanner.py  calibration_data_imu.txt  calibration_data_rtk.txt  calibration_offset.py  coord_transformation.py  differential_drive.py  drive_forward.py  drive_forward_v2.py  kalman.py  keyboard_drive_with_paint.py  main.py  main_simulation.py  node_lawnmower_control.py  path_planner.py  position.py  pub_manager.py  regulation.py  regulation_circle.py  relay_steer.py  sub_manager.py  system_model.py  tempCodeRunnerFile.py
tests/: data_extraction.py  different_speeds_test.py  gps_2018-11-28.json  gps_2018-11-28_new.json  gps_2018-11-29.json  gps_2018-11-29_new.json  kalman_test.py  sub_data.py
(+182 files in other folders)
